<resources>
    <string name="app_name">Conexión Fármaco</string>
    <string name="bienvenido">Bienvenido/a</string>
    <string name="conexion_farmacos">CONEXION\nFARMACOS</string>
    <string name="inicio_sesion">Inicio Sesión</string>
    <string name="eres_nuevo">¿Eres nuevo?</string>
    <string name="registrate">Regístrate</string>
    <string name="correo">Correo</string>
    <string name="contrasena">Contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="nombres">Nombres:</string>
    <string name="apellidos">Apellidos:</string>
    <string name="telefono">Teléfono:</string>
    <string name="confirmar_contrasena">Confirmar contraseña:</string>
    <string name="guardar">Guardar</string>
    <string name="atras">&lt;</string>
    <string name="perfil">Perfil</string>
    <string name="cambiar_foto">Cambiar Foto de Perfil</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
    <string name="informacion_personal">Información Personal</string>

    <string-array name="tipos_sangre">
        <item>No especificado</item>
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>AB+</item>
        <item>AB-</item>
        <item>O+</item>
        <item>O-</item>
    </string-array>

    <string-array name="enfermedades">
        <item>Ninguna</item>
        <item>Diabetes</item>
        <item>Hipertensión</item>
        <item>Asma</item>
        <item>Gastritis</item>
        <item>Arritmia</item>
        <item>Obesidad</item>
        <item>Hipotiroidismo</item>
        <item>Otras</item>
    </string-array>
</resources>